# alpha_zero_os

./: .gitignore  README.md  example.py  pyproject.toml
azero/: __init__.py  _alpha_zero.py  _eval.py  _model.py  _utils.py
azero/examples/: example-os.py
